# tarana_misc

./: notes
benchmark/: benchmarktest.cpp
cube/: .cube.c.swp  cube.c
misc/training/: notes
python/: practice.py  test.py
simple_funcs/: CMakeCache.txt  CMakeLists.txt  Makefile  SimpleMath.cpp  a.out  cmake_install.cmake  simplemath.h  tests  tests.cpp
simple_funcs2/: .tests.cpp.swo  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  queue.h  tests.cpp
